server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-server
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-server
  ports:
    - port: 5000
      targetPort: 5000
