server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krmarket-backend-ingress
  namespace: krmarket
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/x-forwarded-proto: "https"
spec:
  ingressClassName: public
  rules:
  - host: krmarket-api.bezawada.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: krmarket-backend
            port:
              number: 5000
